--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -137,7 +137,7 @@
         {
           "Question": "Èske fanmi m ka antre nan TestBoston?",
           "Paragraphs": [
-            "Kounye a, se sèlman pasyan Brigham and Women’s ki resevwa envitasyon ki kreye oaza yo ki kapab antre nan TestBoston. Si plis pase yon sèl moun nan kay ou te resevwa yon lèt envitasyon, lè sa nou toude kapab antre nan etid la si nou vle. Si w pa te resevwa yon envitasyon, men ou enterese rete enfòme sou pwogrè etid la, nou envite w <a class=\"Link Link_semi-bold\" href=\"#stay-informed\">patisipe nan lis pou resevwa kourye TestBoston</a>."
+            "Kounye a, se sèlman pasyan Brigham and Women’s ki resevwa envitasyon ki kreye oaza yo ki kapab antre nan TestBoston. Si plis pase yon sèl moun nan kay ou te resevwa yon lèt envitasyon, lè sa nou toude kapab antre nan etid la si nou vle. Si w pa te resevwa yon envitasyon, men ou enterese rete enfòme sou pwogrè etid la, nou envite w <a class=\"Link Link_semi-bold Link_no-wrap\" href=\"#stay-informed\">patisipe nan lis pou resevwa kourye TestBoston</a>."
           ]
         },
         {
