--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -137,7 +137,7 @@
         {
           "Question": "هل يمكن لعائلتي الانضمام إلى دراسة TestBoston؟",
           "Paragraphs": [
-            "في الوقت الحالي، لا يمكن إلا لمرضى مستشفى بريجهام والنساء الذين يتلقون دعوات عشوائية الانضمام إلى دراسة TestBoston. إذا تلقى أكثر من شخص في عائلتك خطاب دعوة، فيمكنكما الانضمام معًا إلى الدراسة إذا اخترتما ذلك. إذا كنت لم تتلق دعوة لكنك مهتم بالبقاء على اطلاع بالتقدم الذي تحققه الدراسة، فإننا نرحب <a class=\"Link Link_semi-bold\" href=\"#stay-informed\">بانضمامك إلى القائمة البريدية لدراسة TestBoston</a>."
+            "في الوقت الحالي، لا يمكن إلا لمرضى مستشفى بريجهام والنساء الذين يتلقون دعوات عشوائية الانضمام إلى دراسة TestBoston. إذا تلقى أكثر من شخص في عائلتك خطاب دعوة، فيمكنكما الانضمام معًا إلى الدراسة إذا اخترتما ذلك. إذا كنت لم تتلق دعوة لكنك مهتم بالبقاء على اطلاع بالتقدم الذي تحققه الدراسة، فإننا نرحب <a class=\"Link Link_semi-bold Link_no-wrap\" href=\"#stay-informed\">بانضمامك إلى القائمة البريدية لدراسة TestBoston</a>."
           ]
         },
         {
