--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ru.json
@@ -137,7 +137,7 @@
         {
           "Question": "Могут ли члены моей семьи участвовать в TestBoston?",
           "Paragraphs": [
-            "В настоящее время только пациенты больницы Brigham and Women, получившие приглашения в результате случайного отбора, могут участвовать в исследовании TestBoston. Если более чем один человек в вашей семье получил приглашение, то при желании вы оба можете участвовать в исследовании. Если вы не получили приглашение, но хотите быть в курсе того, как продвигается исследование, то можете <a class=\"Link Link_semi-bold\" href=\"#stay-informed\">подписаться на список рассылки TestBoston</a>."
+            "В настоящее время только пациенты больницы Brigham and Women, получившие приглашения в результате случайного отбора, могут участвовать в исследовании TestBoston. Если более чем один человек в вашей семье получил приглашение, то при желании вы оба можете участвовать в исследовании. Если вы не получили приглашение, но хотите быть в курсе того, как продвигается исследование, то можете <a class=\"Link Link_semi-bold Link_no-wrap\" href=\"#stay-informed\">подписаться на список рассылки TestBoston</a>."
           ]
         },
         {
