--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -69,7 +69,8 @@
       "Summary": "Summary",
       "ActivityStatus": "Status",
       "ActivityDate": "Created",
-      "ActivityActions": "Actions"
+      "ActivityActions": "Actions",
+      "ActivityQuestionCount": "{{questionsAnswered}} / {{questionTotal}} questions"
     },
     "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
     "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
