--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/vi.json
@@ -500,7 +500,10 @@
     },
     "Title": {
       "Default": "TestBoston",
-      "Alert": "Phiên của quý vị sắp hết thời gian."
+      "Alert": "Phiên của quý vị sắp hết thời gian.",
+      "Dashboard": "TestBoston Participant Dashboard",
+      "UPS": "Covid at-home test and shipping instructions for TestBoston",
+      "Home": "TestBoston - The at-home COVID-19 testing study"
     },
     "EmailEntry": {
       "InvalidEmail": "Vui lòng điền một địa chỉ email hợp lệ"
