--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/fr.json
@@ -502,7 +502,7 @@
       "Default": "TestBoston",
       "Alert": "Votre session va bientôt expirer",
       "Dashboard": "TestBoston Participant Dashboard",
-      "UPS": "Covid at-home test and shipping instructions for TestBoston",
+      "UPS": "COVID at-home test and shipping instructions for TestBoston",
       "Home": "TestBoston - The at-home COVID-19 testing study"
     },
     "EmailEntry": {
