rarex | responsive and overall style improvements

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -1,4 +1,11 @@
 {
+  "Activities": {
+    "StatusCodes": {
+      "CREATED": "New",
+      "IN_PROGRESS": "In Progress",
+      "COMPLETE": "Complete"
+    }
+  },
   "Header": {
     "Alts": {
       "Logo": "The NAA10 Foundation",
