Implement rtl support

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -33,9 +33,9 @@
   "MailingList": {
     "Title": "نموذج القائمة البريدية",
     "Questions": {
-      "Adult": "1. هل تبلغ من العمر 18 عامًا أو أكثر؟",
-      "Patient": "2. هل أنت أحد مرضى مستشفى بريجهام والنساء؟",
-      "Email": "3. ما هو عنوان البريد الإلكتروني الأفضل لك؟"
+      "Adult": "١. هل تبلغ من العمر 18 عامًا أو أكثر؟",
+      "Patient": "٢. هل أنت أحد مرضى مستشفى بريجهام والنساء؟",
+      "Email": "٣. ما هو عنوان البريد الإلكتروني الأفضل لك؟"
     },
     "Answers": {
       "Yes": "نعم",
@@ -248,7 +248,7 @@
     "InvitationCode": {
       "Question": "أدخل رمز الدعوة الخاص بك",
       "TooltipAlt": "أيقونة المعلومات",
-      "Tooltip": "إذا تلقيت من طبيبك دعوة ورقية أو بالبريد الإلكتروني، فهي تتضمن رمز دعوة مكونًا من 12 رقمًا في الأعلى.",
+      "Tooltip": "إذا تلقيت من طبيبك دعوة ورقية أو بالبريد الإلكتروني، فهي تتضمن رمز دعوة مكونًا من ١٢ رقمًا في الأعلى.",
       "Placeholder": "أدخل رمز الدعوة",
       "Error": {
         "Part1": "الرمز الذي أدخلته غير نشط. يُرجى التحقق من الرمز الذي أدخلته والمحاولة مرة أخرى. يمكنك دائمًا الاتصال بفريق دراسة TestBoston للحصول على المساعدة:",
@@ -336,9 +336,9 @@
     },
     "Return": {
       "Title": "كيفية إعادة العينات",
-      "Text": "يجب إعادة عينات الاختبار الخاصة بك عن طريق UPS، في اليومنفسه الذي أجريت فيه الاختبار. قم بتسليم مجموعة أدوات الاختبار الخاص بك إما في محل رسمي من محلات UPS Store أو في صندوق تسلم لـUSP. ويمكنك أيضًا طلب أن يقوم UPS بالتقاط العبوة من منزلك إذا كان لديك مكان آمن لتركها في الخارج من أجل سائق UPS.",
+      "Text": "يجب إعادة عينات الاختبار الخاصة بك عن طريق UPS، في اليومنفسه الذي أجريت فيه الاختبار. قم بتسليم مجموعة أدوات الاختبار الخاص بك إما في محل رسمي من محلات UPS Store أو في صندوق تسلم لـUPS. ويمكنك أيضًا طلب أن يقوم UPS بالتقاط العبوة من منزلك إذا كان لديك مكان آمن لتركها في الخارج من أجل سائق UPS.",
       "Step1": {
-        "Title": "الخطوة 1:",
+        "Title": "الخطوة ١:",
         "Text": {
           "Part1": "انقر",
           "Part2": "اكتب الرمز البريدي الخاص بك وانقر \"<span class=\"bold\">مشاهدة جميع الخيارات</span>”."
@@ -346,8 +346,8 @@
         "ImageAlt": "الإرشادات الخاصة بمواقع UPS، موقعك"
       },
       "Step2": {
-        "Title": "الخطوة 2:",
-        "Text": "ضمن “<span class=\"bold\">نوع الموقع</span>”، ضع علامة على \"<span class=\"bold\">UPS Store®</span>\" و\"<span class=\"bold\">UPS Drop Box</span>”. ثم انقر أيقونة البحث",
+        "Title": "الخطوة ٢:",
+        "Text": "ضمن “<span class=\"bold\">نوع الموقع</span>”، ضع علامة على \"<span class=\"bold\">®UPS Store</span>\" و\"<span class=\"bold\">UPS Drop Box</span>”. ثم انقر أيقونة البحث",
         "ImageAlt": "الإرشادات الخاصة بمواقع UPS وصناديق UPS"
       }
     },
