Add service for checking if logged in user is a multi governed one

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
       "Previous": "Previous",
       "Next": "Next",
       "MyAccount": "My Account",
+      "MyConsole": "My Console",
       "YourParticipants": "Your Participants",
       "Submit": "Submit",
       "MedicalHistoryQuestionnaire": "Medical History Questionnaire"
