Participant list refactoring

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -789,6 +789,16 @@
     }
   },
   "Components": {
+    "ParticipantList": {
+      "NoParticipants": "No participants yet"
+    },
+    "ParticipantListItem": {
+      "SurveysToComplete": {
+        "Plural": "{{ count }} surveys to complete",
+        "Singular": "{{ count }} survey to complete"
+      },
+      "Expand": "Expand"
+    },
     "UserActivities": {
       "Columns": {
         "Name": "Form",
