--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -66,8 +66,8 @@
     "IntroSection": {
       "Title": "Nou vle ede kominote nou yo epi aprann plis sou compòtman enfeksyon COVID-19 nan zòn Boston an.",
       "Text": "TestBoston se yon etid sou COVID-19 ki gen soutyen Brigham and Women's Hospital ak Broad Institute of MIT and Harvard.",
-      "Code": "Mete kòd envitasyon mwen an",
-      "NoCode": "Mwen pa gen yon kòd envitasyon"
+      "Code": "Mwen gen yon kòd envitasyon",
+      "NoCode": "Mwen pa gen yon kòd envitasyon epi mwen vle rantre nan etid la"
     },
     "AboutSection": {
       "Title": "Apwopo etid la",
