--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -5,6 +5,10 @@
                 "Title": "Submit",
                 "AriaLabel": "Submit button"
             },
+            "Login": {
+                "Title": "Log In",
+                "AriaLabel": "Log In button"
+            },
             "LearnMore": "Learn More",
             "ViewFAQ": "View FAQ page",
             "JoinMailingList": "Join Mailing List",
@@ -588,6 +592,9 @@
     "Toolkit": {
         "Dashboard": {
             "Title": "My Dashboard"
+        },
+        "SessionExpired": {
+            "Text": "You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
         },
         "Dialogs": {
             "JoinMailingList": {
