--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -160,7 +160,7 @@
                     },
                     {
                         "Website": "http://www.targetcancerfoundation.org/",
-                        "Logo": "assets/images/TCF-logo.png",
+                        "Logo": "assets/images/TargetCancer-logo.png",
                         "Alt": "Target Cancer Foundation logo"
                     }
                 ],
